--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.createEnvironment.contentButton": "show"
+    "python.createEnvironment.contentButton": "show",
+    "editor.fontSize": 15
 }
